Commented out virtual_host_config and website_deployment roles in playbook.yaml

--- a/ansible-webApp/playbook.yaml
+++ b/ansible-webApp/playbook.yaml
@@ -3,5 +3,5 @@
   become: true
   roles:
     - docker_install
-    - virtual_host_config
-    - website_deployment
+    # - virtual_host_config
+    # - website_deployment
