--- a/ansible-webApp/docker_install/tasks/main.yml
+++ b/ansible-webApp/docker_install/tasks/main.yml
@@ -4,7 +4,7 @@
   apt:
     name: aptitude
     state: latest
-    update_cache: true
+    # update_cache: true
 
 - name: Install required system packages
   apt:
