Update docker_install to use yum package manager

--- a/ansible-webApp/docker_install/tasks/main.yml
+++ b/ansible-webApp/docker_install/tasks/main.yml
@@ -1,15 +1,7 @@
 ---
-# tasks file for docker_install
-- name: Install aptitude
-  apt:
-    name: aptitude
-    state: latest
-    # update_cache: true
-
 - name: Install required system packages
-  apt:
+  yum:
     pkg:
-      - apt-transport-https
       - ca-certificates
       - curl
       - software-properties-common
@@ -19,18 +11,13 @@
     state: latest
     update_cache: true
 
-- name: Add Docker GPG apt Key
-  apt_key:
-    url: https://download.docker.com/linux/ubuntu/gpg
-    state: present
-
 - name: Add Docker Repository
-  apt_repository:
+  yum_repository:
     repo: deb https://download.docker.com/linux/ubuntu focal stable
     state: present
 
-- name: Update apt and install docker-ce
-  apt:
+- name: Update yum and install docker-ce
+  yum:
     name: docker-ce
     state: latest
     update_cache: true
