--- a/ansible-webApp/docker_install/tasks/main.yml
+++ b/ansible-webApp/docker_install/tasks/main.yml
@@ -1,25 +1,22 @@
 ---
-- name: Install required system packages
+- name: Install required packages
   yum:
-    pkg:
-      - ca-certificates
-      - python3-pip
-      - virtualenv
-      - python3-setuptools
+    name: "{{ item }}"
     state: latest
-    update_cache: true
+  loop:
+    - yum-utils
+    - device-mapper-persistent-data
+    - lvm2
 
-- name: Add Docker Repository
-  yum_repository:
-    repo: deb https://download.docker.com/linux/ubuntu focal stable
-    state: present
+- name: Add Docker repo
+  get_url:
+    url: "{{ docker_repo }}"
+    dest: /etc/yum.repos.d/docker-ce.repo
 
-- name: Update yum and install docker-ce
-  yum:
-    name: docker-ce
-    state: latest
-    update_cache: true
-
-- name: Install Docker Module for Python
-  pip:
-    name: docker
+- name: Enable Docker Edge & Test repo
+  ini_file:
+    dest: /etc/yum.repos.d/docker-ce.repo
+    section: "{{ item }}"
+    option: enabled
+    value: 0
+  with_items: ["docker-ce-test", "docker-ce-edge"]
