Add Docker installation and service start tasks

--- a/ansible-webApp/docker_install/tasks/main.yml
+++ b/ansible-webApp/docker_install/tasks/main.yml
@@ -20,3 +20,14 @@
     option: enabled
     value: 0
   with_items: ["docker-ce-test", "docker-ce-edge"]
+
+- name: Install Docker
+  package:
+    name: docker-ce
+    state: latest
+
+- name: Start Docker service
+  service:
+    name: docker
+    state: started
+    enabled: yes
