--- a/ansible-webApp/docker_install/tasks/main.yml
+++ b/ansible-webApp/docker_install/tasks/main.yml
@@ -19,7 +19,7 @@
     section: "{{ item }}"
     option: enabled
     value: 0
-  with_items: ["docker-ce-test", "docker-ce-edge"]
+  loop: ["docker-ce-test", "docker-ce-edge"]
 
 - name: Install Docker
   package:
