--- a/ansible-webApp/docker_install/tasks/main.yml
+++ b/ansible-webApp/docker_install/tasks/main.yml
@@ -9,17 +9,11 @@
     - lvm2
 
 - name: Add Docker repo
-  get_url:
-    url: "{{ docker_repo }}"
-    dest: /etc/yum.repos.d/docker-ce.repo
-
-- name: Enable Docker Edge & Test repo
-  ini_file:
-    dest: /etc/yum.repos.d/docker-ce.repo
-    section: "{{ item }}"
-    option: enabled
-    value: 0
-  loop: ["docker-ce-test", "docker-ce-edge"]
+  yum_repository:
+    name: docker-ce-stable
+    async: yes # not required. If set to C(yes) Yum will download packages and metadata from this repo in parallel, if possible.
+    file: docker-ce
+    base_url: "{{ docker_repo }}"
 
 - name: Install Docker
   package:
