--- a/ansible-webApp/docker_install/tasks/main.yml
+++ b/ansible-webApp/docker_install/tasks/main.yml
@@ -1,28 +1,20 @@
 ---
-- name: Install required packages
-  yum:
-    name: "{{ item }}"
-    state: latest
-  loop:
-    - yum-utils
-    - device-mapper-persistent-data
-    - lvm2
-
-- name: Add Docker repo
-  yum_repository:
-    name: docker-ce-stable
-    description: Docker CE Stable
-    async: yes # not required. If set to C(yes) Yum will download packages and metadata from this repo in parallel, if possible.
-    file: docker-ce
-    baseurl: "{{ docker_repo }}"
-
-- name: Install Docker
-  package:
-    name: docker-ce
-    state: latest
-
-- name: Start Docker service
-  service:
-    name: docker
-    state: started
-    enabled: yes
+- name: "Check if docker-ce file exists"
+  stat:
+    path: /etc/yum.repos.d/docker-ce.repo
+  register: stat_result
+- block:
+    - name: "Make sure yum-utils pkg is installed"
+      dnf:
+        name: yum-utils
+        state: latest
+    - name: "Install the Docker Community Edition Repository"
+      command: >
+        yum-config-manager --add-repo https://download.docker.com/linux/centos/docker-ce.repo
+      register: ycm
+    - name: "Enable and run Docer CE"
+      service:
+        name: docker
+        state: started
+        enabled: yes
+  when: not stat_result.stat.exists
